--- a/src/Components/Title/title.css
+++ b/src/Components/Title/title.css
@@ -28,7 +28,6 @@
 
 .blackbox_container{
   position: relative;
-  text-align: center;
   white-space: pre-wrap;
   height: 90vh;
   width: 100vw;
